welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:45: error: unclosed character literal
  message=''
          ^BDRBuggle:45: error: illegal start of simple expression
  message=''
          ^